--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "ts-node src/server.ts",
     "test": "jest",
     "generate-docs": "ts-node scripts/generate-openapi.ts && npx @redocly/cli build-docs openapi.json --output docs/index.html"
-
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,7 @@
     "@redocly/cli": "^2.11.1",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -39,7 +39,8 @@
     "@types/express": "^5.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "firebase-admin": "^13.5.0",
+    "firebase-admin": "^13.6.0",
+    "multer": "^2.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
